# cintent_v3

./: .gitignore  DESIGN.md  README.md  action.yml  eval_detail.json  evaluation_results.json  grab_callgraph.json  pyproject.toml  test_normalized.json
.github/workflows/: publish_private_github_packages.yaml  reusable_trace.yaml  use_cintent_v3.yaml
src/cintent_v3/: __init__.py  __main__.py  auto_plugin.py  callgraph.py  ci.py  evaluator.py  normalizer.py  pytest_plugin.py  tracer.py
src/cintent_v3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workflow_templates/: cintent_v3.yaml  cintent_v3_consumer.yaml  cintent_v3_dropin.yaml  cintent_v3_minimal.yaml  publish_private_github_packages.yaml  use_private_cintent_v3.yaml
