[project]
name = "cintent_v3"
version = "0.1.0"
description = "Adaptive Deterministic Call Graph Tracer for CI Environments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []
authors = [
    {name = "Avishak"},
]
keywords = ["call-graph", "profiling", "ci", "testing", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cintent_v3"
Repository = "https://github.com/YOUR_USERNAME/cintent_v3"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
cintent_v3 = "cintent_v3.__main__:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
